# LP_PFM

./: .editorconfig  .env  .gitignore  .pre-commit-config.yaml  README.md  db_init.py  docker-compose.yaml  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  tox.ini
.github/workflows/: pylint.yml
app/: __init__.py  common.py  config.py  crud.py  currency.json  currency.py  database.py  db.py  db_init.py  fake_generator.py  forms.py  models.py
app/account/: forms.py  views.py
app/edit/: edit.py  forms.py  views.py
app/edit/templates/edit/: account.html  edit.html
app/lk/: views.py
app/static/styles/: styles.css
app/templates/: base.html  edit.html  footer.html  home.html  index.html  login.html  menu.html  registration.html
app/templates/edit/: account.html  edit.html
app/templates/lk/: lk.html
app/templates/transactions/: add.html
app/templates/user/: dashboard.html  form_add_transaction.html  login.html  registration.html  signup.html
app/templates/user/modal_add_tr_forms/: base_form_add.html  form_add_costs.html  form_add_income.html  form_add_transfer.html
app/test/: test_database.py
app/transactions/: forms.py  models.py  views.py
app/user/: forms.py  models.py  views.py
requirements/: dev.txt  prod.txt
src/: crud.py  db.py  fake_generator.py  main.py  models.py  refactor_models.py  settings.py  test.py
src/templates/: admin_panel.html  index.html  login.html  registration.html
test/: conftest.py  test_database.py
tests/: conftest.py  test_database.py  test_web.py
webapp/: __init__.py  config.py  crud.py  db.py  fake_generator.py  models.py
webapp/templates/: admin_panel.html  index.html
