[tool.poetry]
name = "LP_PFM"
version = "0.0.1"
description = "Учебный проект курса Lerm Python. Менеджер персональных финансов"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"
SQLAlchemy = "^2.0.25"
WTForms = "^3.1.1"
Flask-WTF = "^1.2.1"
flask-login = "^0.6.3"
pre-commit = "^3.6.0"
ruff = "^0.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
