[tool.poetry]
name = "LP_PFM"
version = "0.0.1"
description = "Учебный проект курса Lerm Python. Менеджер персональных финансов"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"
SQLAlchemy = "^2.0.25"
WTForms = "^3.1.1"
Flask-WTF = "^1.2.1"
flask-login = "^0.6.3"
pre-commit = "^3.6.0"
flask-sqlalchemy = "^3.1.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.13"
faker = "^22.5.1"
matplotlib = "^3.8.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py310"
select = [
  "F",   # pyflakes
  "A",   # flake8-builtins
  "E",   # pycodestyle
  "W",   # pycodestyle
  "N",   # pep8-naming
  "UP",  # pyupgrade,
  "I",   # isort
  "B",   # flake8-bugbear
  "RET", # flake8-return
]

fix = false
show-fixes = true
show-source = true

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.isort]
lines-between-types = 1
lines-after-imports = 2

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 6.
max-complexity = 6